*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -31,3 +31,11 @@ actions.start=Start
 actions.stop=Stop
 
 actions=Actions
+
+file.new=New
+
+help.help=Help Contents
+
+actions.createnode=New node
+
+actions.deletenode=Delete node
