*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -6,6 +6,8 @@ file.open=Open
 
 file.export=Export
 
+file.import=Import
+
 file.close=Close
 
 file.exit=Exit
@@ -39,3 +41,7 @@ help.help=Help Contents
 actions.createnode=New node
 
 actions.deletenode=Delete node
+
+actions.xmlexportproject=Export project (XML)
+
+actions.xmlimportproject=Import project (XML)
