*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -45,3 +45,13 @@ actions.deletenode=Delete node
 actions.xmlexportproject=Export project (XML)
 
 actions.xmlimportproject=Import project (XML)
+
+actions.createproject=New project
+
+actions.deleteproject=Delete project
+
+actions.openproject=Open project
+
+actions.saveproject=Save project
+
+file.save=Save
