--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -55,3 +55,27 @@ actions.openproject=Open project
 actions.saveproject=Save project
 
 file.save=Save
+
+actions.collapse=Collapse
+
+actions.expand=Expand
+
+file.new.tooltip=New project
+
+file.open.tooltip=Open project
+
+file.close.tooltip=Close project
+
+file.save.tooltip=Save project
+
+file.xmlimportproject.tooltip=Import project from XML source
+
+file.exit.tooltip=Exit to system
+
+actions.createnode.tooltip=Create new node
+
+actions.deletenode.tooltip=Delete node
+
+actions.start.tooltip=Start progress
+
+actions.stop.tooltip=Stop progress
