--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -5,3 +5,7 @@ availableprojects.selecttoopen.tooltip=Select a project to open
 selectprojecttoopen=Select a project to open
 
 openproject=Open project
+
+new_project=New project
+
+new_project.enter_name=Enter new project name
