--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -9,3 +9,7 @@ openproject=Open project
 new_project=New project
 
 new_project.enter_name=Enter new project name
+
+new_node=New node
+
+new_node.enter_name=Enter new node name
