--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -13,3 +13,23 @@ new_project.enter_name=Enter new project name
 new_node=New node
 
 new_node.enter_name=Enter new node name
+
+reset=Reset
+
+code=Code
+
+name=Name
+
+description=Description
+
+notes=Notes
+
+confirm=Confirm
+
+progresses=Progresses
+
+detail=Detail
+
+from=From
+
+to=To
