--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -79,3 +79,7 @@ actions.deletenode.tooltip=Delete node
 actions.start.tooltip=Start progress
 
 actions.stop.tooltip=Stop progress
+
+actions.saveprogressitem=Save progress item
+
+file.xmlexportproject.tooltip=Export project to XML
