*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -33,3 +33,7 @@ detail=Detail
 from=From
 
 to=To
+
+xmlimport.successful=XML import completed successfully
+
+xmlexport.successful=XML export completed successfully
