*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -37,3 +37,20 @@ to=To
 xmlimport.successful=XML import completed successfully
 
 xmlexport.successful=XML export completed successfully
+
+#Inspector di avanzamento
+progress.inspector=Progress inspector
+
+#Inspector progress item
+progressitem.inspector=Node inspector
+
+#LIsta avanzamenti
+progress.list=Progresses list
+
+#Locale
+local=Local
+
+#Sottoalbero
+subtree=Subtree
+
+ok=ok
