*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -54,3 +54,11 @@ local=Local
 subtree=Subtree
 
 ok=ok
+
+beeponevents=Beep on events
+
+apply=Apply
+
+desktop.color=Desktop color
+
+user.settings=User preferences
