*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/about.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/about.properties
@@ -1,3 +1,21 @@
 # Sample ResourceBundle properties file
 
 applicationinfo=<HTML><B>Timekeeper</B> v.0.1<P>This application i s provider AS-IS without any warranty...</HTML>
+
+product.version=Version number
+
+product.build=Build number
+
+details.title=Details
+
+system.title=System
+
+property=Property
+
+value=Value
+
+product.releasedate=Release date
+
+about.title=About
+
+intro.title=Intro
