--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -62,3 +62,85 @@ apply=Apply
 desktop.color=Desktop color
 
 user.settings=User preferences
+
+choose=Choose
+
+datastorage.init =Init data storage
+
+ jdostorage.name=JDO storage name
+
+plaintextlog.buffersize=Plain text log buffer size
+
+direct.help=Direct help
+
+ui.prefs=UI preferences
+
+data.prefs=Data preferences
+
+other.prefs=Other preferences
+
+jdostoragedir.path=JDO storage directory path
+
+progressing.period.duration=Progressing duration
+
+application.progress.status=Application progress status
+
+progresslist.combo.local_subtree=Local/subtree list
+
+duration=Duration
+
+node=Node
+
+datastorage.init.confirm=Confirm data storage initialization? All data in the storage will be erased.
+
+reports=Reports
+
+filters=Filters
+
+output=Output
+
+report.filters.hint=Define filters to refine report data
+
+report.type.hint=Choose the output type
+
+close=Close
+
+launch=Launch
+
+report.type.xls=Microsoft Excel 97/2000/XP
+
+report.type.csv=CSV (Comma Separated Values)
+
+report.type.xml=XML
+
+report.type.html=HTML
+
+report.type.pdf=PDF (Portable Document Format)
+
+report.type.choose=Choose
+
+report.type.view=View
+
+report.filter.choose=Choose report filter
+
+report.flavor.hint=Choose a type ofreport
+
+report.flavor=Report type
+
+report.flavor.treeprogresses=Tree of progresses
+
+report.flavor.simpleprogresses=Simple progresses list
+
+report.flavor.choose=Choose report type
+
+file.type.xls=Microsoft Excel 97/2000/XP (.xls)
+
+file.type.csv=Comma Separated Values (.csv)
+
+file.type.xml=XML (.xml)
+
+file.type.html=HTML (.html;.htm)
+
+file.type.pdf=PDF (.pdf)
+
+jobs.tree=Jobs tree
