--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -83,3 +83,11 @@ actions.stop.tooltip=Stop progress
 actions.saveprogressitem=Save progress item
 
 file.xmlexportproject.tooltip=Export project to XML
+
+help.contextualhelp=Contextual help
+
+actions.saveprogressitem.tooltip=Save progress item changes
+
+file.deleteproject.tooltip=Delete project
+
+tools.reports=Reports
