*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -39,13 +39,13 @@ xmlimport.successful=XML import completed successfully
 xmlexport.successful=XML export completed successfully
 
 #Inspector di avanzamento
-progress.inspector=Progress inspector
+progress.inspector=Job progress inspector
 
 #Inspector progress item
-progressitem.inspector=Node inspector
+progressitem.inspector=Job node inspector
 
 #LIsta avanzamenti
-progress.list=Progresses list
+progress.list=Job progresses list
 
 #Locale
 local=Local
@@ -81,7 +81,7 @@ other.prefs=Other preferences
 
 jdostoragedir.path=JDO storage directory path
 
-progressing.period.duration=Progressing duration
+progressing.period.duration=Progressing job duration
 
 application.progress.status=Application progress status
 
@@ -127,9 +127,9 @@ report.flavor.hint=Choose a type ofreport
 
 report.flavor=Report type
 
-report.flavor.treeprogresses=Tree of progresses
+report.flavor.treeprogresses=Tree of job progresses
 
-report.flavor.simpleprogresses=Simple progresses list
+report.flavor.simpleprogresses=Plain job progresses list
 
 report.flavor.choose=Choose report type
 
@@ -144,3 +144,47 @@ file.type.html=HTML (.html;.htm)
 file.type.pdf=PDF (.pdf)
 
 jobs.tree=Jobs tree
+
+report.successfully.generated.at=Report successfully generated. It is available at
+
+report.successfully.generated=Report successfully generated
+
+report.root.item=Report root node
+
+choose.desktop.color=Choose desktop color
+
+report.filter.structure=Structure filtering
+
+filter.root.enable=Enable report root node filter
+
+report.filter.time=Jobs time filtering
+
+filter.from.enable=Enable FROM filter (inclusive)
+
+filter.to.enable=Enable TO filter (exclusive)
+
+secondary=Secondary
+
+main=Main
+
+stop.current.progress=Stop current progress
+
+progressitem.choice=Job choice
+
+choose.ringchart.root=Choose ring chart root
+
+update=update
+
+choose.root=Choose root
+
+chart.frame=Chart frame
+
+stop.current.progress.confirm=Current progress will be stopped. Confirm?
+
+subtree.work.ring.chart=Subtree work ring chart
+
+delete.node.confirm=Deleting a job you loose all its progresses. Continue?
+
+control.panel=Control panel
+
+visible.level.number=Visible levels
