--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -76,17 +76,17 @@ actions.createnode.tooltip=Create new node
 
 actions.deletenode.tooltip=Delete node
 
-actions.start.tooltip=Start progress
+actions.start.tooltip=Start job
 
-actions.stop.tooltip=Stop progress
+actions.stop.tooltip=Stop job
 
-actions.saveprogressitem=Save progress item
+actions.saveprogressitem=Save job node
 
 file.xmlexportproject.tooltip=Export project to XML
 
 help.contextualhelp=Contextual help
 
-actions.saveprogressitem.tooltip=Save progress item changes
+actions.saveprogressitem.tooltip=Save job node changes
 
 file.deleteproject.tooltip=Delete project
 
