--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -238,3 +238,15 @@ ring.chart=Ring chart
 subtree.work.bar.graph=Subtree work bar graph
 
 delete.progress.confirm=You have chosen to delete a progress. \nContinuing you will loose that progrtess permanently\! \nDo you want to continue?
+
+legenda=Legenda
+
+total=Total
+
+bar.chart.auto.load=Auto load bar chart
+
+date=Date
+
+period.length.days=Period length (days)
+
+period.count=Periods count
