*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/release.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/release.properties
@@ -3,7 +3,7 @@
 external.name=JTTS
 minor.version.number=1
 build.number=48
-build.date=2005/03/09 01\:07
+build.date=2005-03-09 01\:07:\00.000
 major.version.number=0
 release.date=2005-01-01 00\:00\:00.000
 internal.name=JTTS
