--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -203,7 +203,7 @@ ring.chart.auto.load=Ring chart auto load
 
 delete.project.confirm=You have choosen to deletie a project.\n Continuing you will loose all its nodes and progresses. \nDo you want to continue?
 
-project.import.conflict.resolution.overwrite.confirm=You have choosen to overwrite an existing project.\nContinuing all old data will be lost. Continue?
+project.import.conflict.resolution.overwrite.confirm=You have choosen to overwrite an existing project.  Overwriting old data will be lost.  Do you really want to continue?
 
 project=project
 
@@ -250,3 +250,21 @@ date=Date
 period.length.days=Period length (days)
 
 period.count=Periods count
+
+report.flavor.cumulatelocalprogresses=Period job time report
+
+Job.effort.in.period=Job effort in period
+
+Tree.cumulated.effort.in.period=Tree cumulated effort in period
+
+Job.progresses=Job progresses
+
+processing=processing
+
+loading.project=loading project
+
+importing.project=importing project
+
+exmporting.project=exporting project
+
+File.overwrite.confirm=File exists.  Continuing will cause original file loss.  Do you really want to continue?
