--- a/yoyodyne/DIR/timekeeper/deploy/build.properties
+++ b/yoyodyne/DIR/timekeeper/deploy/build.properties
@@ -4,18 +4,18 @@
 # Abilita la firma degli archivi JAR generati. Default: FALSE.
 signjar.enabled=true
 # Alias del certificato da usare per la firma.
-signjar.keystore.alias=timekeeper1
+signjar.keystore.alias=ost
 # Password del certificato da usare per la firma.
-signjar.keystore.password=timekeeper
+signjar.keystore.password=etabeta
 
 ################################
 # Abilita la generazione del certificato utile per la firma degli archivi JAR generati. Default: FALSE.
 #genkey.enabled=true
 
 # Alias del certificato da generare.
-genkey.alias=timekeeper1
+genkey.alias=ost
 # Password del certificato da generare.
-#genkey.password=timekeeper
+#genkey.password=etabeta
 
 # Gestione attributi sottoparti del x.500 Distinguished Name per l'individuazione dell'entità che rilascia il certificato.
 # Nome proprio di persona
@@ -23,7 +23,7 @@ genkey.dname.cn=Davide Cavestro
 # Reparto aziendale
 genkey.dname.ou=Software Development
 # Nome azienda
-genkey.dname.o=DaveSoft
+genkey.dname.o=Cardinis Solutions S.p.A.
 # Località
 genkey.dname.l=Padova
 # Stato
