*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/animations.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/animations.properties
@@ -2,8 +2,8 @@
 
 welcome.to=Welcome To
 
-application.definition=A simple desktop helper|to discover on which jobs|you really spend|your precious time.
+application.definition=The easiest WAY|to discover how|YOU really spend|YOUR precious time.
 
 application.features.title=Main Features\:
 
-application.features.list=Easy to use|import and export data|flexible reports.
+application.features.list=Easy to use|flexible reports|data import and export.
