--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -24,7 +24,7 @@ description=Description
 
 notes=Notes
 
-confirm=Confirm
+confirm=confirm
 
 progresses=Progresses
 
@@ -268,3 +268,13 @@ importing.project=importing project
 exmporting.project=exporting project
 
 File.overwrite.confirm=File exists.  Continuing will cause original file loss.  Do you really want to continue?
+
+job=job
+
+progress.in.subtree=active progress in subtree
+
+cancel=cancel
+
+New.progress=New progress
+
+Progress.start.options=Progress start options
