--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -74,9 +74,9 @@ actions.createnode.tooltip=Create new node
 
 actions.deletenode.tooltip=Delete node
 
-actions.start.tooltip=Start job
+actions.start.tooltip=Start progress (press SHIFT for options)
 
-actions.stop.tooltip=Stop job
+actions.stop.tooltip=Stop progress
 
 actions.saveprogressitem=Save job node
 
@@ -113,3 +113,11 @@ project.open.tooltip=Open project
 project.delete=Delete
 
 tools.reports.tooltip=Show report launch dialog
+
+actions.new.progress.terminated.tooltip=Create a terminated progress
+
+actions.new.progress.terminated=New  progress (terminated)
+
+actions.new.progress=New progress
+
+actions.new.progress.tooltip=Create a new progress
