--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -74,7 +74,7 @@ actions.createnode.tooltip=Create new node
 
 actions.deletenode.tooltip=Delete node
 
-actions.start.tooltip=Start progress (press SHIFT for options)
+actions.start.tooltip=<HTML>Start progress<BR> <I>hold SHIFT key pressed for options dialog</I></HTML>
 
 actions.stop.tooltip=Stop progress
 
